major update - webpack et al

--- a/app/assets/stylesheets/application_mailer.scss
+++ b/app/assets/stylesheets/application_mailer.scss
@@ -1,15 +1,15 @@
-@import 'bootstrap/variables';
-@import 'bootstrap-email';
+//@import 'bootstrap/variables';
+//@import 'bootstrap-email';
 
 .email-container {
   margin: 10px 20px 20px;
   }
 
 .email-header {
-  font-size: $font-size-h4;
+//  font-size: $font-size-h4;
   color: white;
   line-height: 30px;
-  background: $brand-info;
+//  background: $brand-info;
   margin-bottom: 30px;
   height: 30px;
   padding-left: 20px;
@@ -33,7 +33,7 @@
 
 .email-btn {
   height: 40px;
-  background: $btn-primary-bg;
+//  background: $btn-primary-bg;
   font-size: 16px;
   color: white;
 //  font-weight: bold;
