--- a/app/views/daysheet/_admin_desktop_index.html.erb
+++ b/app/views/daysheet/_admin_desktop_index.html.erb
@@ -9,7 +9,7 @@
     ts  = (@sort == 'entry_ts' && @direction == 'asc')?"Time &nbsp;&nbsp;<i class='glyphicon glyphicon-sort-by-attributes-alt'></i>":"Time &nbsp;&nbsp;<i class='glyphicon glyphicon-sort-by-attributes'></i>" 
 %>
 <div id='page'>
-<table class="table table-hover table-striped table-bordered">
+<table class="table table-hover table-striped table-bordered table-responsive"> 
   <thead>
       <tr>
           <th></th>
