--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,20 +1,30 @@
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <div class="col-md-4 col-sm-4 col-md-offset-4 col-sm-offset-4">
-  <h3>Forgot my password</h3>
-  <div class="well">
 
-  <div class="form-inputs">
+<div class="container pt-5">
+<div class="card devise-card-width rounded-2xl mx-auto">
+
+  <div class="card-header">
+    <div class="fs-5"> Forgot your password?</div>
+  </div>
+
+  <div class="card-body">
+
+    <div class="pt-2">
     <%= f.input :email,
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "email" } %>
-  </div>
+    </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions", class: "btn btn-primary" %>
-  </div>
+    <div class="pt-3">
+    <%= f.button :submit,  "Send me reset password instructions", class: "btn btn-primary" %>
+    </div>
 
-<%= render "devise/shared/links" %>
+    <%= render "devise/shared/links" %>
+
   </div>
-  </div>
+</div>
+</div>
 <% end %>
+
+
