--- a/app/views/layouts/_find.html.erb
+++ b/app/views/layouts/_find.html.erb
@@ -2,8 +2,7 @@
    <% tool_tip_title = "Full/Partial Last Name, First Name, Health Number, Date Of Birth: [dd-mm-yyyy] or full email" %>
 <% end %>
 
-<li style="width: 30px;">&nbsp;</li>
-<li class="nav-item active">
+<li class="nav-item active mx-auto">
 <%= form_with  method: :get, skip_enforcing_utf8: :true do |f| %>
   <div class="form-group">
     <div class="col-sm-12 col-md-10 padding-0">
