--- a/app/views/static_pages/other_doctors.html.erb
+++ b/app/views/static_pages/other_doctors.html.erb
@@ -1,4 +1,4 @@
-<div class="card bg-primary col-md-8 col-md-offset-2 " >
+<div class="card bg-light col-md-8 col-md-offset-2 " >
   <div class="card-body">
     <h4>Family doctors accepting new patients in Hamilton </h4>
     <pre>
