--- a/app/views/static_pages/walkin_clinics_stoney_creek.html.erb
+++ b/app/views/static_pages/walkin_clinics_stoney_creek.html.erb
@@ -1,4 +1,4 @@
-<div class="card bg-secondary col-md-8 col-md-offset-2 " >
+<div class="card bg-light col-md-8 col-md-offset-2 " >
   <div class="card-body">
     <h4> Other walk-In Clinics in Stoney Creek </h4>
 
