--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,9 @@
 <% provide(:title, 'Update User Profile') %>
 <% provide(:button_text, 'Save changes') %>
 
+<div class='card mx-auto mt-5 bg-light' style="max-width: 28rem;">
+  <div class="card-body">
     <%= render 'form' %>
+  </div>
+</div>
 
