--- a/app/views/visits/_patient_mobile_visit.html.erb
+++ b/app/views/visits/_patient_mobile_visit.html.erb
@@ -5,14 +5,14 @@
   <td><%= visit.meds_renewed_str %></td>
   <td class="text-center">
   <% if visit.arrived? %>
-    <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_patient_visit_path(@patient,visit) %>
+    <%= link_to '<i class="bi bi-pencil-square"></i>'.html_safe, edit_patient_visit_path(@patient,visit) %>
   <% end %>
   </td>
   <td class="text-center">
     <% if visit.status == CANCELLED %>
     Cancelled
   <% elsif visit.date.today? && visit.arrived? %>
-    <%= link_to '<i class="glyphicon glyphicon-remove-sign"></i>'.html_safe, cancel_patient_visit_path(@patient, visit) %>
+    <%= link_to '<i class="bi bi-x-square"></i>'.html_safe, cancel_patient_visit_path(@patient, visit) %>
   <% end %>
   </td>
 </tr>
