--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,13 +1,33 @@
-<p></p>
-<h3>Welcome to our clinic, <%= @resource.patient.fname %> <%= @resource.patient.lname %>!</h3>
+<body class="bg-red-100">
+  <div class="container">
+    <h2 class='text-danger'> Stoney Creek Medical Walk-In Clinic </h2>
+    <div class="space-y-6 p-6">
+      <h3 class="text-2xl fw-800">
+        Dear <%= @resource.email %>
+      </h3>
 
-<p>You can confirm your new account by using the link below. After this you can log in to your profile using your email <b><%= @email %></b> and book your first visit</p>
+      We received your request for registration to visit Stoney Creek Walk-In clinic. You can complete this registration by clicking on a button below.
+      If you did not request this registration, please just ignore this email.
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+      <div class='mt-6'>
+        <%= link_to "Acivate My Account", confirmation_url(@resource, confirmation_token: @token), class: "btn btn-red-500 rounded-full px-6 w-full w-lg-48"  %>
+      </div>
 
+      <p class="pt-5">If you have any questions, you can contact us at <a href = "mailto:ostadim1@gmail.com">staff@stoneycreek_clinic.com</a>.</p>
 
-<p></p>
-<p>
-Stoney Creek Medical Walk-In Clinic 
-</p>
+      <div class='mt-5'>
+        Best regards and see you soon!
+      </div>
+
+  <hr class="border border-danger border-1">
+  <small>
+    Stoney Creek Medical Walk-in Clinic <br>
+    140 Centennial Pkwy N, <br>
+    Stoney Creek, ON,  L8E 1H9 <br>
+    tel. 905.561.9255
+  </small>
+
+    </div>
+  </div>
+</body>
 
