--- a/app/views/layouts/_admin.html.erb
+++ b/app/views/layouts/_admin.html.erb
@@ -1,12 +1,15 @@
 <% menu_items = %w(users export_files edt_files paystubs) %>
 <li class="dropdown nav-item <%= 'active' if menu_items.include?(controller_name) %>">
-<a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin<b class="caret"></b> </a>
-<ul class="dropdown-menu">
- <li><%= link_to "Users", users_path %></li>
+  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Admin </a>
+<ul class="dropdown-menu"  aria-labelledby="navbarDropdown">
+ <li><%= link_to "Users", users_path, class: "dropdown-item" %></li>
  <li class="divider"></li>
- <li><%= link_to "Export Files", export_files_path %> </li>
- <li><%= link_to "EDT Files", edt_files_path  %> </li> 
- <li><%= link_to "Budget", budget_path  %> </li> 
- <li><%= link_to "Total billed", total_unpaid_visits_path  %> </li> 
+ <li><%= link_to "Export Files", export_files_path, class: "dropdown-item" %> </li>
+ <li><%= link_to "EDT Files", edt_files_path, class: "dropdown-item"  %> </li> 
+ <li><%= link_to "Budget", budget_path, class: "dropdown-item"  %> </li> 
+ <li><%= link_to "Total billed", total_unpaid_visits_path, class: "dropdown-item"  %> </li> 
 </ul>
 </li>
+
+<li> &nbsp; &nbsp; </li>
+
