--- a/app/views/layouts/_billing.html.erb
+++ b/app/views/layouts/_billing.html.erb
@@ -1,12 +1,15 @@
 <% menu_items = %w(billings claims pay_stubs ra_messages visits) %>
 <li class="dropdown nav-item <%= 'active' if menu_items.include?(controller_name) %>"> 
-<a href="#" class="dropdown-toggle" data-toggle="dropdown">Billing<b class="caret"></b> </a>
-<ul class="dropdown-menu">
-<li><%= link_to "Daily Billing", billings_path %></li>
-<li><%= link_to "Paid Claims", claims_path  %> </li>
-<li><%= link_to "Unpaid Claims", unpaid_visits_path  %> </li>
-<li> <%= link_to "Pay Stubs", paystubs_path, method: :get %> </li>
-<li> <%= link_to "MHO RA Messages", ra_messages_path, method: :get %> </li>
-<li><%= link_to "Visits This Cycle", billed_visits_path  %> </li>
+<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Billing </a>
+<ul class="dropdown-menu"  aria-labelledby="navbarDropdown">
+<li><%= link_to "Daily Billing", billings_path, class: "dropdown-item" %></li>
+<li><%= link_to "Paid Claims", claims_path, class: "dropdown-item"  %> </li>
+<li><%= link_to "Unpaid Claims", unpaid_visits_path, class: "dropdown-item"  %> </li>
+<li> <%= link_to "Pay Stubs", paystubs_path, method: :get, class: "dropdown-item" %> </li>
+<li> <%= link_to "MHO RA Messages", ra_messages_path, method: :get, class: "dropdown-item" %> </li>
+<li><%= link_to "Visits This Cycle", billed_visits_path, class: "dropdown-item"  %> </li>
 </ul>
 </li>
+
+
+
