--- a/app/views/layouts/_desktop_admin_navigation.html.erb
+++ b/app/views/layouts/_desktop_admin_navigation.html.erb
@@ -1,17 +1,19 @@
-<nav class="navbar navbar-expand-lg navbar-light">
+<nav class="navbar navbar-expand-sm navbar-light alert-info">
     <ul class="nav navbar-nav navbar-left">
       <%= render "layouts/#{device_type}_logo" %>
     </ul>
 
-  <ul class="nav navbar-nav navbar-right">
+<ul class="nav navbar-nav mx-auto">
   <%= render 'layouts/select_doctor' if (device_type == 'desktop' && controller_name == 'daysheet')%>
   <% if controller_name == 'daysheet' || controller_name == 'billings' %>
     <%= render 'layouts/date_select' %>
   <% elsif !%w( visits static_pages password_resets patient_docs).include?(controller_name) %>
     <%= render 'layouts/find' %>
   <% end %>
-  <li class="nav-item <%= 'active' if controller_name == 'patients' %>"><%= link_to "Patients", patients_path %></li>
-  <li class="nav-item <%= 'active' if controller_name == 'daysheet' %>"><%= link_to "Day Sheet", daysheet_path %></li>
+</ul>  
+<ul class="nav navbar-nav ms-auto">
+  <li class="nav-link <%= 'active' if controller_name == 'patients' %>"><%= link_to "Patients", patients_path %></li>
+  <li class="nav-link <%= 'active' if controller_name == 'daysheet' %>"><%= link_to "Day Sheet", daysheet_path %></li>
   <%= render 'layouts/billing' %>
   <%= render 'layouts/docs' %>
   <%= render 'layouts/ref' %>
