--- a/app/views/layouts/_desktop_footer.html.erb
+++ b/app/views/layouts/_desktop_footer.html.erb
@@ -1,25 +1,25 @@
 <footer>
+<div class="container-flex mx-3">
   <small>
-    <!--img src="/images/small_logo.png" width="35"></img>-->
-    <img src="/favicon.ico" width="16x16" class='ml-3'></img>
-    The <a href="<%= project_url %>">Walk-In EMR </a> -  &copy; <%= Date.today.year %> - All rights reserved
+    <div class="d-flex justify-content-between border-top">WalkIn EMR  -  &copy; <%= Date.today.year %> - All rights reserved
+      <% if current_user %>
+       <div class="d-flex justify-content-between">
+         Logged in <%= current_user.role %> :  <%= current_user.name %>
+       </div>
+      <% end %>
+      <div class="d-flex justify-content-end">
+      <% unless current_user %>
+        <%= link_to "Login", new_user_session_path  %>
+      <% end %>
+      <%= link_to "About", about_path, target: '_new', class: "px-2" %>
+      <%= link_to "Help", help_path, target: '_new', class: "px-2" %>
+      <%= link_to "Contact", contact_path, target: '_new', class: "px-2" %>
+      <%= link_to "News", news_path, target: '_new', class: "px-2"  %>
+      <%= link_to "Terms", terms_path, target: '_new', class: "px-2" %>
+      <%= link_to "Privacy", privacy_path, target: '_new', class: "px-2"  %>
+      </div>
+    </div>
   </small>
-  <nav>
-    <ul>
-      <small>
-      <% if logged_in? %>
-	<li>Logged in <%= current_user.role %>: <%= link_to "#{current_user.email}", edit_user_path(current_user.id) %></li>
-      <% end %>
-      <li style="width:40px">&nbsp;</li>
-      <% if current_user && !current_user.patient? %>
-      <li><%= link_to "About", about_path, target: '_new' %></li>
-      <li><%= link_to "Help", help_path, target: '_new' %></li>
-      <li><%= link_to "News", news_path, target: '_new' %></li>
-      <% end %>
-      <li><%= link_to "Contact", contact_path, target: '_new' %></li>
-      <li><%= link_to "Terms", terms_path, target: '_new' %></li>
-      <li><%= link_to "Privacy Policy", privacy_path, target: '_new' %></li>
-      </small>
-    </ul>
-  </nav>
+</div>
 </footer>
+
