--- a/app/views/layouts/_docs.html.erb
+++ b/app/views/layouts/_docs.html.erb
@@ -1,12 +1,13 @@
 <% menu_items = %w(reports invoices daily_charts referrals letters charts ) %>
 <li class="dropdown nav-item <%= 'active' if menu_items.include?(controller_name) %>"> 
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Docs <b class="caret"></b> </a>
-  <ul class="dropdown-menu">
-     <li><%= link_to "Reports", reports_path %></li>
-     <li> <%= link_to "Invoices", invoices_path, method: :get %> </li>
-     <li> <%= link_to "Letters", letters_path, method: :get %> </li>
-     <li> <%= link_to "Referrals", referrals_path, method: :get %> </li>
-     <li> <%= link_to "Day Charts", daily_charts_path, method: :get %> </li>
-     <li> <%= link_to "Patient Charts", charts_path, method: :get %> </li>
+  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Documents </a>
+  <ul class="dropdown-menu"  aria-labelledby="navbarDropdown">
+     <li><%= link_to "Reports", reports_path, class: "dropdown-item" %></li>
+     <li> <%= link_to "Invoices", invoices_path, method: :get, class: "dropdown-item" %> </li>
+     <li> <%= link_to "Letters", letters_path, method: :get, class: "dropdown-item" %> </li>
+     <li> <%= link_to "Referrals", referrals_path, method: :get, class: "dropdown-item" %> </li>
+     <li> <%= link_to "Day Charts", daily_charts_path, method: :get, class: "dropdown-item" %> </li>
+     <li> <%= link_to "Patient Charts", charts_path, method: :get, class: "dropdown-item" %> </li>
   </ul>
 </li>
+
