--- a/app/views/layouts/_forms.html.erb
+++ b/app/views/layouts/_forms.html.erb
@@ -1,13 +1,13 @@
 <% menu_items = %w( forms ) %>
 <li class="dropdown nav-item <%= 'active' if menu_items.include?(controller_name) %>">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-  Forms <b class="caret"></b>
+  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Forms </a>
   </a>
-    <ul class="dropdown-menu">
-      <li> <%= link_to "All Forms", forms_path, method: :get %> </li>
-      <li> <%= link_to "WCB Forms", forms_path(ftype: WCB_FORM), method: :get %> </li>
-      <li> <%= link_to "Lab Forms", forms_path(ftype: LAB_FORM), method: :get %> </li>
-      <li> <%= link_to "MTO Forms", forms_path(ftype: MTO_FORM), method: :get %> </li>
-      <li> <%= link_to "Clinic Forms", forms_path(ftype: CLINIC_FORM), method: :get %> </li>
+    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+      <li> <%= link_to "All Forms", forms_path, method: :get, class: "dropdown-item"   %> </li>
+      <li> <%= link_to "WCB Forms", forms_path(ftype: WCB_FORM), method: :get, class: "dropdown-item"   %> </li>
+      <li> <%= link_to "Lab Forms", forms_path(ftype: LAB_FORM), method: :get, class: "dropdown-item"   %> </li>
+      <li> <%= link_to "MTO Forms", forms_path(ftype: MTO_FORM), method: :get, class: "dropdown-item"   %> </li>
+      <li> <%= link_to "Clinic Forms", forms_path(ftype: CLINIC_FORM), method: :get, class: "dropdown-item"   %> </li>
     </ul>
 </li>
+
