--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,28 +1,26 @@
-<% img = '<img src="/images/leaf2.png" width=25>' %> 
+<% img = '<img src="/images/leaf2.png" width=35>' %> 
 <% if logged_in? %>
    <%= render "layouts/#{device_type}_#{current_user.role}_navigation" %>
 <% else %>
   <% if device_is_desktop? %>
-<div id="topbar" class="d-flex align-items-center fixed-top">
-  <ul class="nav navbar-nav">
-    <li class="nav-item"> <%= link_to "#{img} Stoney Creek Medical Walk-In Clinic".html_safe, root_path, id: "logo" %></li>
-    <li class="nav-item" style="padding-left: 20em"><i class="glyphicon glyphicon-time"></i> Mon - Fri, 9am to 7:30pm; Sat,Sun: 9am to 1:30pm
-     &nbsp; <i class="glyphicon glyphicon-phone"></i> 
-    </li>
-  </ul>
-  <!--
-  <ul class="nav navbar-nav navbar-right">
-    <li class="nav-item"><%= link_to "<i class='glyphicon glyphicon-log-in'></i> Login".html_safe, new_user_session_path, id: "login_link" %></li>
-  </ul>
-  -->
-</div>
+    <nav class="navbar navbar-expand bg-secondary">
+    <ul class="navbar-nav">
+      <li class="nav-item"> <%= link_to "#{img} Stoney Creek Medical Walk-In Clinic".html_safe, root_path, id: "logo" %></li>
+    </ul>
+
+    <ul  class="navbar-nav ms-auto me-5">
+    <li class="nav-item text-white"><i class="bi bi-clock"></i> Mon - Fri, 9am to 7:30pm; Sat,Sun: 9am to 1:30pm </li>
+    <li> &nbsp; </li>
+    </ul>
+
+    </nav>
 <% else %>
-  <nav class="navbar navbar-expand-lg navbar-light">
-  <ul class="nav navbar-nav navbar-mobile">
-  <li class="nav-item btn-primary"><%= link_to "Stoney Creek Walk-In Clinic".html_safe, root_path, id: "mobile-logo" %>
-  <center><font color=white>  140 Centennial Pkwy N, Hamilton, ON L8E 1H9 </font> </center>
+  <nav class="navbar navbar-expand bg-white navbar-mobile_">
+  <ul class="nav navbar-nav ">
+    <li class="nav-item mx-auto"><%= link_to "#{img} Stoney Creek Walk-In Clinic".html_safe, root_path, id: "mobile-logo" %> 
+    <center> <small> 140 Centennial Pkwy N, Hamilton, ON L8E 1H9 </small></center>
   </li>
   </ul>
-  </div>
+</nav>
 <% end %>
 <% end %>
