--- a/app/views/layouts/_rails_default.erb
+++ b/app/views/layouts/_rails_default.erb
@@ -1,6 +1,9 @@
-<%= csrf_meta_tags %>
-<%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-<%# stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-<%= render 'layouts/google_analytics' %>
-<%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
+<%= csrf_meta_tags %>
+<%= csp_meta_tag %>
+
+<%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'%>
+<%= javascript_packs_with_chunks_tag 'application', 'data-turbolinks-track': 'reload' %>
+<%= javascript_packs_with_chunks_tag 'pagination-keys', 'data-turbolinks-track': 'reload' %>
+
+<%# render 'layouts/google_analytics' %>
