--- a/app/views/layouts/_ref.html.erb
+++ b/app/views/layouts/_ref.html.erb
@@ -1,16 +1,16 @@
 <% menu_items = %w(procedures diagnoses providers drugs vaccines doctors schedules) %>
 <li class="dropdown nav-item <%= 'active' if menu_items.include?(controller_name) %>">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-  Ref <b class="caret"></b>
+  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Ref </a>
   </a>
-    <ul class="dropdown-menu">
-      <li> <%= link_to "Procedures", procedures_path, method: :get %> </li>
-      <li> <%= link_to "Diagnoses", diagnoses_path, method: :get %> </li>
-      <li> <%= link_to "Ins. Providers", providers_path, method: :get %> </li>
-      <li> <%= link_to "Medications", drugs_path, method: :get %> </li>
-      <li> <%= link_to "Vaccines", vaccines_path, method: :get %> </li>
-      <li><%= link_to "Doctors", doctors_path %> </li>
-      <li><%= link_to "Schedules", schedules_path %> </li>
-      <li><%= link_to "Health Card Validator", card_validator_path %> </li>
+    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+      <li> <%= link_to "Procedures", procedures_path, method: :get , class: "dropdown-item" %> </li>
+      <li> <%= link_to "Diagnoses", diagnoses_path, method: :get , class: "dropdown-item" %> </li>
+      <li> <%= link_to "Ins. Providers", providers_path, method: :get , class: "dropdown-item" %> </li>
+      <li> <%= link_to "Medications", drugs_path, method: :get , class: "dropdown-item" %> </li>
+      <li> <%= link_to "Vaccines", vaccines_path, method: :get , class: "dropdown-item" %> </li>
+      <li><%= link_to "Doctors", doctors_path , class: "dropdown-item" %> </li>
+      <li><%= link_to "Schedules", schedules_path , class: "dropdown-item" %> </li>
+      <li><%= link_to "Health Card Validator", card_validator_path, class: "dropdown-item"  %> </li>
     </ul>
 </li>
+
