--- a/app/views/patients/_desktop_patient.html.erb
+++ b/app/views/patients/_desktop_patient.html.erb
@@ -9,10 +9,10 @@
 	<td class="text-center"><%= patient.dob %> </td>
 	<td class="text-center"><%= patient.mobile_or_home_phone %> </td> 
         <td class="text-center"><%= link_to '<i class="glyphicon glyphicon-envelope"></i>'.html_safe, addrlabel_patient_path(patient), remote: device_is_desktop?, 'data-toggle':  "modal", 'data-target': '#modal-window',  method: 'get'  %></td>
-        <td class="text-center"><%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_patient_path(patient), remote: device_is_desktop?, 'data-toggle':  "modal", 'data-target': '#modal-window',  method: 'get'  %></td>
+        <td class="text-center"><%= link_to '<i class="bi bi-pencil-square"></i>'.html_safe, edit_patient_path(patient), remote: device_is_desktop?, 'data-toggle':  "modal", 'data-target': '#modal-window',  method: 'get'  %></td>
 
   	<% if current_user.admin?  %>
-          <td class="text-center">  <%= link_to '<i class="glyphicon glyphicon-remove-sign"></i>'.html_safe, patient, method: :delete, data: { confirm: "Are you sure you want to delete #{patient.lname}?" } %>  </td> 
+          <td class="text-center">  <%= link_to '<i class="bi bi-x-square"></i>'.html_safe, patient, method: :delete, data: { confirm: "Are you sure you want to delete #{patient.lname}?" } %>  </td> 
 	<% end %>
 
 	<td class="text-center">
