--- a/app/views/patients/_edit.html.erb
+++ b/app/views/patients/_edit.html.erb
@@ -3,12 +3,12 @@
 %>
  
 <div class="modal-header">
-	<button type="button" class="close" data-dismiss="modal">&times;</button>
-        <i class="glyphicon glyphicon-user"></i>&nbsp;
-	<b class="modal-title" id="myModalLabel"><%= @patient.full_name %> - Edit Patient Record</b>
+  <div class="modal-title"> Edit Patient Record</div>
+  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 </div>
+
 <div class="modal-body">
- <div class="cyan-well">
+ <div class="card card-info">
    <% if current_user.patient? %>
     <%= render 'patient_form' %>
   <% else %>
