--- a/app/views/patients/_patient_show.html.erb
+++ b/app/views/patients/_patient_show.html.erb
@@ -1,15 +1,10 @@
-<!--
-No online visits due to new clinic policy. Please contact the owner <a href="mailto:eosta@me.com">Dr. Elena Ostapenko</a> if you have any questions
-<a href="mailto:eosta@me.com">eosta@me.com</a>
--->
-
 <% remote = device_is_desktop? %>
 <% hcnum = "Health Card: #{@patient.ohip_num} #{@patient.ohip_ver} (#{@patient.hin_prov})" %>
 <% ifhnum = "IFH #: #{@patient.ifh_number}" if @patient.ifh_number.present? %> 
 
 <div class="row p-3">
-  <aside class="col-md-6">
-    <section class="user_info">
+  <div class="col-md-6">
+<div class='card'>
 <pre class="pre-scrollable-lg">
 <b><%= @patient.pat_type_str %></b> <%= link_to '<i class="glyphicon glyphicon-credit-card"></i>'.html_safe, label_patient_path(@patient), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window',  method: 'get', onclick: "set_md_modal()" %>  <%= @patient.age_str %> <%= @patient.full_sex %></b> 
 <%= hcnum if hcnum.present? %>
@@ -26,7 +21,9 @@ No online visits due to new clinic policy. Please contact the owner <a href="mai
 <b>Latest medication renewal: </b> <%= @patient.latest_medication_renewal.to_date %> 
 <% end %>
 </pre>
-	 
+</div>
+
+<div class='mt-3'></div>
 &nbsp; <%= render("medications", remote: remote) if @patient.medications.any? %>
 &nbsp; <%# render("prescriptions", remote: remote) if @patient.prescriptions.any? %>
 &nbsp; <%= render("invoices", remote: remote) if @patient.invoices.any? %>
@@ -34,62 +31,38 @@ No online visits due to new clinic policy. Please contact the owner <a href="mai
 &nbsp; <%= render("referrals", remote: remote) if @patient.referrals.any? %>
 &nbsp; <%= render("patient_docs", remote: remote) if @patient.patient_docs.any? %>
 
-<!--
-<font size=3>
 <% if @patient.visits.count.zero? %>
   <h4> Welcome to Stoney Creek Walk-In clinic, <%= @patient.fname.capitalize %>! </h4> 
 You are all set for your first virtual appointment with one of our doctors. 
 <% end %>
 
-<% unless @patient.has_visit_today? %>
-<div class="pt-3">  
-To book your visit, please click the button below. Doctor on duty will get in touch with you as soon as possible. Doctor will decide if you need in-person visit. Medications can be renewed over the phone. It helps if you provide phone number of your pharmacy in your patient profile, but it's ok if you don't.
-</div>
-<% end %>
-</font>
-
-  </section>
-
 <% if @patient.has_visit_today? %>
-  <h4> Welcome to Stoney Creek Walk-In clinic, <%= @patient.fname.capitalize %>! </h4> 
+  <h4> Welcome to Stoney Creek Walk-In clinic, <%= @patient.fname.capitalize %>! </h4>
   <p class="pt-3">
-  Your appointment for today is registered. Please wait for the doctor to call you back at the number provided. We normally call our patients within an hour of online request made during office hours. We can't guarantee response time during off hours.  
+  Your appointment for today is registered. Please wait for the doctor to call you back at the number provided. We normally call our patients within an hour of online request made during office hours. We can't guarantee response time during off hours.
   </p>
   <p class="pt-3">
   You can edit your new visit to add documents/pictures and to provide more details/vital signs. Just click on the icon in edit column on the right. Once diagnosis is assigned, new visit becomes uneditable.
   </p>
-
+  <div class="pt-3 small" style="float:left" > <b> By using this website you agree to all <%= link_to 'Terms And Conditions', terms_path %> regarding our clinic's services </b> </div>
+  
 <% else %>
-<div class="col-sm-2 col-md-6 col-md-offset-3 pt-5">
-  <font size=3>
-<%= button_to 'Book Virtual Visit', new_patient_visit_path(@patient), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', class:"btn btn-success btn-lg", method: 'get', disabled: @patient.has_visit_today?  %>
-  </font>
-</div>
--->
-
-  <div class="pt-5" style="float:left" ><small>* Only one appointment per patient per day is allowed by OHIP </small></div>
-  <!--
-  <div class="pt-3" style="float:left" > <b> By using this website you agree to all <%= link_to 'Terms And Conditions', terms_path %> regarding our clinic's services </b> </div>
-  -->
-
- <div class="pt-3" style="clear: both">
-    <div class="panel panel-info news-panel-body">
-      <div class="panel-body "><p align="justify">
-       This is current schedule updated daily. Please <%= link_to "book your appointment online", new_user_session_path %> or call the clinic  during business hours: <b> (905) 561-9255 </b>.
-       For telemedicine visits, our goal is to call you back within an hour of your online request, provided it was made between 8am and 8pm.
-  <%= render "schedules/full_schedule" %>
-        </p>
-    </div>
-  </div>
+  <div class="pt-3">
+    To book your visit, please click the button below. Doctor on duty will get in touch with you as soon as possible. Doctor will decide if you need in-person visit. Medications can be renewed over the phone. It helps if you provide phone number of your pharmacy in your patient profile, but it's ok if you don't.
   </div>
 
-  <% end %>
-</aside>
-
-<div class="spacer-20"></div>
-<%= render "patient_#{device_type}_visits" %>
-
-</div>
+  <div class='mt-3'></div>
+  <%= button_to 'Book Virtual Visit', new_patient_visit_path(@patient), remote: remote, 'data-bs-toggle':  "modal", 'data-bs-target': '#modal-window', class:"btn btn-success btn-lg", method: 'get', disabled: @patient.has_visit_today?  %>
+  <div class="pt-3" style="float:left" ><small>* Only one appointment per patient per day is allowed by OHIP </small></div>
 
 
-
+<% end %>
+  </div>
+  <div class='col-md-6'>
+    <%= render "patient_#{device_type}_visits" %>
+  </div>
+  </div> <!-- row -->
+  
+  <div class='p-5'>
+  <%= render "google_biz_link" %>
+  </div>
