--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -2,10 +2,10 @@
 
 <% if device_is_desktop? %>
   <h2><%= @patient.full_name %> :  Patient Profile &nbsp; 
-  <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_patient_path(@patient) %> <%#, remote: true, 'data-toggle': "modal", 'data-target': '#modal-window', onclick: "set_lg_modal()" %>
+  <%= link_to '<i class="bi bi-pencil-square"></i>'.html_safe, edit_patient_path(@patient) %> <%#, remote: true, 'data-toggle': "modal", 'data-target': '#modal-window', onclick: "set_lg_modal()" %>
 <% else %>
   <h2><%= @patient.full_name %>  
-  <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_patient_path(@patient) %>
+  <%= link_to '<i class="bi bi-pencil-square"></i>'.html_safe, edit_patient_path(@patient) %>
 <% end %>
 </h2>
 
