--- a/app/views/schedules/_edit.html.erb
+++ b/app/views/schedules/_edit.html.erb
@@ -4,9 +4,11 @@
 %>
  
 <div class="modal-header">
-	<button type="button" class="close" data-dismiss="modal">&times;</button>
-	<b class="modal-title" id="myModalLabel">Schedule for Dr. <%= @schedule.doctor.lname %>  - Edit</b>
+  <div class="modal-title">Schedule for Dr. <%= @schedule.doctor.lname %>  - Edit</div>
+  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 </div>
+
+
 <div class="modal-body">
        <%= render 'form' %>
 </div>
