--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -1,8 +1,9 @@
 <% provide(:title, "Doctor's schedules") %>
 <%= render "shared/modal", size: 'md' %>
 
-<div class="col-md-6 col-md-offset-2">
-<h3 class="display-1">Doctor's Schedules</h3>
+<div class="card bg-light card-width mx-auto">
+  <div class="card-body"> 
+  <h3 class="display-1">Doctor's Schedules</h3>
 <table class="table table-hover table-striped table-bordered" >
   <thead>
     <tr>
