--- a/app/views/static_pages/_footer_icons.html.erb
+++ b/app/views/static_pages/_footer_icons.html.erb
@@ -1,26 +1,26 @@
-<div class="row" style="bottom: -10px; position: relative; clear: both; width: 100%;">
-<div class="col-md-1 col-xs-3 col-md-offset-5 col-xs-offset-2" style="vertical-align: bottom;">
-  <!--
-  <a href="https://doctors.cpso.on.ca/DoctorDetails/E-Ostapenko/0169356-74913" target="_new">
-    <img src="/images/lena.png" width=65><br><small> My CPSO record</small></a>
+
+
+<div class="container text-center">
+<div class="row justify-content-center">
+  <div class="col">
+<i class="bi bi-phone-vibrate" style="font-size:30px;"></i> <br><small>Fast Callbacks</small>
+  </div>
+
+<div class="col">
+<i class="bi bi-database-fill-lock" style="font-size:30px;"></i><br><small>Secure OTN Platform</small>
 </div>
 
-<div class="col-md-1 col-xs-3">
-  -->
+<div class="col">
+<i class="bi bi-check2-square" style="font-size:30px;"></i><br><small>OHIP covered</small>
+</div>
 
-  <i class="glyphicon glyphicon-time" style="font-size:30px;"></i><br><small>Fast Callbacks</small>
-</div>
-<div class="col-md-1 col-xs-3">
-  <i class="glyphicon glyphicon-lock" style="font-size:30px;"></i><br><small>Secure OTN Platform</small>
-</div>
-<div class="col-md-1 col-xs-3">
-  <i class="glyphicon glyphicon-ok" style="font-size:30px;"></i><br><small>OHIP covered</small>
-</div>
 <% if device_is_desktop? %>
-<div class="col-md-1 col-xs-3">
-  <i class="glyphicon glyphicon-refresh" style="font-size:30px;"></i><br><small>Round The Clock Virtual Visits</small>
+<div class="col">
+  <i class="bi bi-clock" style="font-size:30px;"></i><br><small>Round The Clock Virtual Visits</small>
 </div>
 <% end %>
+
+</div>
 </div>
 
 
