--- a/app/views/users/_edit.html.erb
+++ b/app/views/users/_edit.html.erb
@@ -2,10 +2,12 @@
    provide(:button_text, 'Save changes')
 %>
 
+
 <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <b class="modal-title" id="myModalLabel">Edit User Profile</b>
+  <div class="modal-title"><b><%= @user.name %> - Edit User</b></div>
+  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 </div>
+
 <div class="modal-body">
        <%= render 'form' %>
 </div>
