--- a/app/views/visits/_edit.html.erb
+++ b/app/views/visits/_edit.html.erb
@@ -4,10 +4,10 @@
 %>
  
 <div class="modal-header">
-	<button type="button" class="close" data-dismiss="modal">&times;</button>
-        <i class="glyphicon glyphicon-user"></i>&nbsp;
-        <b class="modal-title" id="myModalLabel"><%= @patient.full_name %>, tel. <%= @patient.mobile_or_home_phone %></b>
+  <div class="modal-title"><%= @patient.full_name %>, tel. <%= @patient.mobile_or_home_phone %></div>
+  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 </div>
+
 <div class="modal-body">
   <%= render "#{current_user.role}_form" %>
 </div>
