--- a/app/views/visits/_patient_desktop_visit.html.erb
+++ b/app/views/visits/_patient_desktop_visit.html.erb
@@ -6,7 +6,7 @@
   <td><%= visit.meds_renewed_str %></td>
   <td class="text-center">
   <% if visit.arrived? %>
-    <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_patient_visit_path(@patient,visit), remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window', onclick: "set_lg_modal()"  %>
+    <%= link_to '<i class="bi bi-pencil-square"></i>'.html_safe, edit_patient_visit_path(@patient,visit), remote: true, 'data-bs-toggle':  "modal", 'data-bs-target': '#modal-window', onclick: "set_lg_modal()"  %>
   <% end %>
   </td>
 
@@ -15,7 +15,7 @@
     <% if visit.status == CANCELLED %>
     Cancelled
   <% elsif visit.date.today? && visit.arrived? %>
-    <%= link_to '<i class="glyphicon glyphicon-remove-sign"></i>'.html_safe, cancel_patient_visit_path(@patient, visit), data: { confirm: "Are you sure you want to cancel your appointment? Once cancelled, you won't be able to book another appointment today." } %>
+    <%= link_to '<i class="bi bi-x-square"></i>'.html_safe, cancel_patient_visit_path(@patient, visit), data: { confirm: "Are you sure you want to cancel your appointment? Once cancelled, you won't be able to book another appointment today." } %>
   <% end %>
   </td>
 </tr>
