--- a/app/views/visits/_patient_form.html.erb
+++ b/app/views/visits/_patient_form.html.erb
@@ -8,8 +8,9 @@
 <% current_doctor_id = OWNER_DOC_ID %>
 <%= f.hidden_field :doc_id, value: current_doctor_id  %>
 
-<div class="well">
-<div class="row">
+<div class="card bg-light">
+  <div class="card-body">
+<div class="row mx-3">
   <div class="col-sm-4">
     <% if device_is_desktop? %>
     <h3>Your Vitals:</h3>
@@ -44,7 +45,7 @@
 </div>
 
 <div class="pt-2 checkbox-list">
-    <%= f.input :meds_renewed, as: :boolean, label:'I would like to renew my medications', input_html: {style:'width: 40px;'} %>
+    <%= f.input :meds_renewed, as: :boolean, label:'I would like to renew my medications' %>
 </div>
 
 <% if @visit.documents.present? %>
@@ -70,13 +71,14 @@
 
 <div class="pt-3">
 <% unless action_name == 'show' %>
-    <%= f.button :submit, yield(:button_text), class: "btn btn-primary btn-block btn-lg" %>
+    <%= f.button :submit, yield(:button_text), class: "btn btn-primary btn-block" %>
 <% end %>
 </div>
 
 <small><i>Please make sure the phone number shown in the title is correct. Otherwise doctor won't be able to reach you</i></small>
 </div>
 
+</div>
 
 <% end %>
 
