--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -2,9 +2,8 @@
 
 <%= simple_form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
 
-<div class='form-group row'>
-<div class="col-md-4 col-sm-4 col-md-offset-4 col-sm-offset-4">
-<div class="well">
+<div class="card bg-light devise-card-width mx-auto mt-5">
+  <div class="card-body">
   <%= f.error_notification %>
   <%= f.full_error :confirmation_token %>
 
@@ -16,12 +15,11 @@
                 input_html: { autocomplete: "email" } %>
   </div>
 
-  <div class="form-actions">
+  <div class="form-actions mt-3">
     <%= f.button :submit, "Resend confirmation instructions", class: "btn btn-primary" %>
   </div>
 
 <%= render "devise/shared/links" %>
-</div>
 </div>
 </div>
 <% end %>
