--- a/app/views/billings/index.html.erb
+++ b/app/views/billings/index.html.erb
@@ -67,7 +67,7 @@
 
 </div>
 
-<div class="bottom_nav">
+<div class="bottom_nav my_pagination">
   <%= will_paginate @visits, class: "btn" %>
 </div>
 </div>
