--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -27,7 +27,7 @@
 </div>
 
 <div class="row">
-<div class="bottom_nav">
+<div class="bottom_nav my_pagination">
 <%= will_paginate @charts,  class: "btn" %>
 </div>
 </div>
