--- a/app/views/claims/index.html.erb
+++ b/app/views/claims/index.html.erb
@@ -51,6 +51,6 @@
 </table>
 
 <div class="row">
-<div class="bottom_nav">
+<div class="bottom_nav my_pagination">
 <%= will_paginate @claims, params: {filter_doc_id: @doc_id, adjusted: @adjusted}, class: "btn" %> 
 </div>
