--- a/app/views/daysheet/_doctor_desktop_index.html.erb
+++ b/app/views/daysheet/_doctor_desktop_index.html.erb
@@ -49,7 +49,7 @@
 </table>
 
 <% if @daysheet.any? %>
-<div class="bottom_nav">
+<div class="bottom_nav my_pagination">
 <%= will_paginate @daysheet, class: "btn" %> 
 </div>
 <% end %>
