--- a/app/views/edt_files/index.html.erb
+++ b/app/views/edt_files/index.html.erb
@@ -29,6 +29,6 @@
 </table>
 
 <div class="row">
-<div class="bottom_nav">
+<div class="bottom_nav my_pagination">
 <%= will_paginate @edt_files, class: "btn" if @edt_files %> 
 </div>
