--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -25,7 +25,7 @@
 </table>
 
 <div class="row">
-<div class="bottom_nav">
+<div class="bottom_nav my_pagination">
 <%= will_paginate @invoices, class: "btn" %>
 </div>
 </div>
