--- a/app/views/patients/_mobile_index.html.erb
+++ b/app/views/patients/_mobile_index.html.erb
@@ -30,7 +30,7 @@
 <% end %>
 </div>
 
-<div class="bottom_nav">
+<div class="bottom_nav my_pagination">
 <%= will_paginate @patients, class: "btn" %> 
 </div>
 
