--- a/app/views/procedures/index.html.erb
+++ b/app/views/procedures/index.html.erb
@@ -35,6 +35,6 @@
 <% end %>
 </div>
 
-<div class="bottom_nav">
+<div class="bottom_nav my_pagination">
 <%= will_paginate @procedures, class: "btn" %>
 </div>
