--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -30,6 +30,6 @@
 <%= button_to "Create New Report", new_report_path, class: "btn btn-primary col-md-2", method: 'get'  %>
 </div>
 
-<div class="bottom_nav">
+<div class="bottom_nav my_pagination">
 <%= will_paginate @reports, class: "btn" %> 
 </div>
