--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -23,7 +23,7 @@
 <div class='spacer-20'></div>
 
 <div class="row">
-<div class="bottom_nav">
+<div class="bottom_nav my_pagination">
 <%= will_paginate(@visits) %>
 </div>
 </div>
