--- a/app/views/daysheet/_staff_mobile_index.html.erb
+++ b/app/views/daysheet/_staff_mobile_index.html.erb
@@ -53,7 +53,7 @@
 </table>
 
 <% if @daysheet.any? %>
-<div class="bottom_nav">
+<div class="bottom_nav my_pagination">
 <%= will_paginate @daysheet, class: "btn" %> 
 </div>
 <% end %>
