--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -33,6 +33,6 @@
 <%= button_to "Add New Doctor", new_doctor_path, class: "btn btn-primary col-md-2", method: :get %>
 </div>
 
-<div class="bottom_nav">
+<div class="bottom_nav my_pagination">
 <%= will_paginate @doctors, class: "btn" %>
 </div>
