--- a/app/views/forms/index.html.erb
+++ b/app/views/forms/index.html.erb
@@ -31,7 +31,7 @@
 <% end %>
 </div>
 
-<div class="bottom_nav">
+<div class="bottom_nav my_pagination">
 <%= will_paginate @forms, class: "btn" %>
 </div>
 </div>
