--- a/app/views/providers/index.html.erb
+++ b/app/views/providers/index.html.erb
@@ -34,6 +34,6 @@
 <% end %>
 </div>
 
-<div class="bottom_nav">
+<div class="bottom_nav my_pagination">
 <%= will_paginate @providers, class: "btn" %>
 </div>
